[package]
name = "get-equestrian-class-info"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
prettytable-rs = "0.10.0"
csv = "1.1"
